# Learn2Slither

./: Board.cpp  Board.hpp  CMakeLists.txt  Makefile  Snake.cpp  Snake.hpp  main.cpp  notes.txt  readme.txt  utils.cpp  utils.hpp  visuals.cpp
include/: Board.hpp  Snake.hpp  utils.hpp  visuals.hpp
